conformance/tests/httproute-rewrite-host-backend-weights.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rewrite-host-weights-backend
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  hostnames:
  - "rewrite.example"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /prefix
    backendRefs:
    - name: infra-backend-v1
      port: 8080
      weight: 50 
      filters:
      - type: URLRewrite
        urlRewrite:
          hostname: infra-backend-v1.one
    - name: infra-backend-v2
      port: 8080
      weight: 50
      filters:
      - type: URLRewrite
        urlRewrite:
          hostname: infra-backend-v2.one
  - backendRefs:
    - name: infra-backend-v1
      port: 8080
      weight: 50 
      filters:
      - type: URLRewrite
        urlRewrite:
          hostname: infra-backend-v1.two
    - name: infra-backend-v2
      port: 8080
      weight: 50
      filters:
      - type: URLRewrite
        urlRewrite:
          hostname: infra-backend-v2.two
